Bug 401463 and others. Make us call InstallImplementation in more places in order to behave more like we did when InstallImplementation was called during LoadBindings. r/sr=jst